java_maven_project/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app-service
  labels:
    app: spring-boot-app
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: spring-boot-app
  type: ClusterIP
